--- a/Xcode/Kids Paint/Kids Paint/Views/PenCell.xib
+++ b/Xcode/Kids Paint/Kids Paint/Views/PenCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="72" height="102"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="penGreen" translatesAutoresizingMaskIntoConstraints="NO" id="icZ-6J-OC9">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="penBlack" translatesAutoresizingMaskIntoConstraints="NO" id="icZ-6J-OC9">
                         <rect key="frame" x="0.0" y="24" width="72" height="202"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="202" id="8SD-wt-9TW"/>
@@ -37,6 +37,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="penGreen" width="76" height="205"/>
+        <image name="penBlack" width="76" height="205"/>
     </resources>
 </document>
